<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/titleNuevoCliente"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
       app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centroVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/default_margin"
        android:textColorHint="@color/white"

        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/introduceUsuario"
            android:textColorHint="@color/white"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/nif"
        android:layout_marginTop="@dimen/default_margin"
        app:endIconMode="password_toggle"
        android:textColorHint="@color/white"
        app:endIconTint="@color/white"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduceContrasenya"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/password1"
        android:layout_marginTop="@dimen/default_margin"
        app:endIconMode="password_toggle"
        android:textColorHint="@color/white"
        app:endIconTint="@color/white"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduceContrasenya2"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/entrar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintEnd_toStartOf="@id/centroVertical"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="20dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/salir"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/centroVertical"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="20dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password2"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/default_margin"
        android:textColorHint="@color/white"
        >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/introduceTuNombre"
        android:textColorHint="@color/white"

        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nombre"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/default_margin"
        android:textColorHint="@color/white"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/introduceApellidos"
            android:textColorHint="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/apellidos"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/default_margin"
        android:textColorHint="@color/white"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/introduceEmail"
            android:textColorHint="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>