<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dark"
    android:id="@+id/layerConfiguracion"
    >

    <TextView
        android:id="@+id/tituloConfiguracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/configuracion"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="@id/centroVertical"
        app:layout_constraintStart_toStartOf="@id/centroVertical"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centroVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/tituloConfiguracion"
        android:layout_marginTop="40dp"
        app:endIconMode="password_toggle"
        >


    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduceContraseñaActual"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/currentPassword"
        android:layout_marginTop="40dp"
        app:endIconMode="password_toggle"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduceContraseñaNueva"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/newPassword"
        android:layout_marginTop="10dp"
        app:endIconMode="password_toggle"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduceContraseñaNueva"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirmar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        app:layout_constraintTop_toBottomOf="@id/newPassword2"
        app:layout_constraintEnd_toStartOf="@id/centroVertical"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVolver"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        app:layout_constraintTop_toBottomOf="@id/newPassword2"
        app:layout_constraintStart_toStartOf="@id/centroVertical"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
